--- a/_site.yml
+++ b/_site.yml
@@ -6,8 +6,8 @@ navbar:
       href: index.html
     - text: "Ziele"
       href: Ziele.html
-    - text: "Journal"
-      href: Journal.html
+    - text: "1. Stunde"
+      href: Stunde1.html
     - text: "Links"
       href: Links.html
 output_dir: "docs"
