--- a/_site.yml
+++ b/_site.yml
@@ -6,8 +6,8 @@ navbar:
       href: index.html
     - text: "Ziele"
       href: Ziele.html
-    - text: "1. Stunde"
-      href: Stunde1.html
+    - text: "Einführung"
+      href: Einführung.html
     - text: "Mikrodatenanalyse"
       href: Mikrodatenanalyse_Workflow.html
     - text: "Links"
