--- a/_site.yml
+++ b/_site.yml
@@ -8,6 +8,8 @@ navbar:
       href: Ziele.html
     - text: "Einführung"
       href: Einführung.html
+    - text: "Tidyverse"
+      href: Tidyverse.html
     - text: "Mikrodatenanalyse"
       href: Mikrodatenanalyse_Workflow.html
     - text: "Links"
