--- a/_site.yml
+++ b/_site.yml
@@ -14,6 +14,8 @@ navbar:
       href: ggplot.html
     - text: "Mikrodatenanalyse"
       href: Mikrodatenanalyse_Workflow.html
+    - text: "Karten und Geodaten"
+      href: Karten.html 
     - text: "Links"
       href: Links.html
 output_dir: "docs"
