Added Section Animationen

--- a/_site.yml
+++ b/_site.yml
@@ -16,6 +16,8 @@ navbar:
       href: Mikrodatenanalyse_Workflow.html
     - text: "Karten und Geodaten"
       href: Karten.html 
+    - text: "Animationen und interaktive Abbildungen"
+      href: Interaktive_Abbildungen.html 
     - text: "Links"
       href: Links.html
 output_dir: "docs"
